<resources>
    <string name="app_name">Disqus</string>
    <string name="facebook_app_id">1490783984294391</string>
    <string name="fb_login_protocol_scheme">fb1490783984294391</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_quiz_detail">Question Detail</string>
    <string name="title_activity_quiz_list">Question List</string>
    <string name="title_activity_ip_list">Interest Profiler</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_home">Disqus</string>
    <string name="action_settings">Settings</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="agree">Agree</string>
    <string name="neutral">Neutral</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="unsure">Unsure</string>
    <string name="is_answered">Answered</string>
    <string name="name">Name</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="user_menu_description">User Profile</string>
    <string name="user_menu_label">Me</string>
    <string name="explore_menu_label">Explore</string>
    <string name="explore_menu_description">Find Careers associated tou your skills.</string>
    <string name="connect_menu_label">Connect</string>
    <string name="connect_menu_description">Find your peers.</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="exit_app_dialog">Log Out of Disqus?</string>

</resources>
